# ceo-playbook

./: .gitignore  404.html  CNAME  GEMINI.md  README.md  index.html  index.json  index.xml  pyproject.toml  robots.txt  sitemap.xml
.agents/: AGENTS.md
.policies/: article-writing-guide.md  category_governance_policy.md  tag_governance_policy.md
.scripts/: create_category_index_mds.py  populate_category_bodies.py  remove_venture_building_from_proposal.py  tag_governance_proposal.md  update_frontmatter.py
about/: index.html
advisory/: index.html  index.xml
ai-strategy/: index.html
articles/: index.html  index.xml
authors/: index.html  index.xml
basel-framework/: index.html
categories/: index.html  index.xml
conductor/: aeo-seo-plan.md  index.md  product.md  sticky-notification-shortcode.md  workflow.md
contact/: index.html
content/: _index.md  about.md  contact.md  speaker.md
data/: site-stats.json
docs/: brand-guideline.md  github-workflow.md  newsletter-automation-guide.md  seo-plan.md  site-overhaul-plan.md  speaker-design.md
i18n/: en.yaml
js/: appearance.min.c58466a6976618caadf142f69eda7ce7beb52c80805f514a036928c50633f3c6dfd9dcf09406be581c364bc1e8c0f2a7e82d528348b27e5e2baf0e2f56770950.js
lab/: index.html  index.xml
layouts/: robots.txt
margo-guide/: index.html
portfolio/: index.html  index.xml
research/: index.html  index.xml
series/: index.html  index.xml
signals/: index.html  index.xml
site-stats/: index.html  index.xml
speaker/: index.html
tags/: index.html  index.xml
videos/: index.html  index.xml
(+937 files in other folders)
